Got acts_as_dag working as an "implementation" of the core graph library.
git-svn-id: svn://rubyforge.org/var/svn/gratr@28 6aa1fcdd-e81e-0410-86a3-8714df8c797d

--- a/acts_as_dag/README
+++ b/acts_as_dag/README
@@ -13,8 +13,8 @@ Documentation in the works.
 
 == Copying
 
-Copyright (c) 2006, Rick Bradley
-Copyright (c) 2006, 2007, Rick Bradley and Shawn Garbett
+Copyright (c) 2006 Rick Bradley
+Copyright (c) 2006, 2007 Rick Bradley and Shawn Garbett
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
